src/pages/AboutTheTeam/style.css
.dev {
  margin: 2%;
}

.devs h1 {
  margin: auto;
}

h1 {
  margin-top: 0px;
  margin-bottom: 5px;
  text-align: center;
}

h2, h3, h4, h5, h6 {
  margin-top: 0 auto;
  margin-bottom: 0px;
  text-align: center;
}

.hiturunk {
  width: 150px;
  border-radius: 50%;
}

.img-div {
  margin: 0 auto;
}

.team-photo {
  width: 120px;
  height: 120px;
  grid-row-start: 1;
  margin-bottom: -15%;
}

.crypto-kek-div {
  text-align: center;
  padding-left: 30%;
  padding-right: 30%;
}

.trade-kek {
  margin-top: -15px;
}

.trade-defi {
  margin-top: -15px;
}

.defiville-div {
  text-align: center;
  padding-left: 30%;
  padding-right: 30%;
}

.crypto-kek-pic {
  padding-top: 20px;
  width: 25%;
}

.defiville-pic {
  padding-top: 20px;
  width: 50%;
}

@media (max-width: 767px) {
  .penguin-party {
    flex-direction: column;
    align-items: center;
    text-align: center;
  }
  .devs {
    flex-direction: column;
    grid-template-columns: 1fr;
  }
  .hiturunk {
    width: 45%;
  }
}

